config/victoria-metrics-k8s-stack/grafana-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics-stack-grafana
  namespace: victoria-metrics-stack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30081
