config/victoria-metrics-k8s-stack/vmagent-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmagent-victoria-metrics-stack-vmks
  namespace: victoria-metrics-stack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: vmagent
  ports:
    - port: 8429
      targetPort: 8429
      nodePort: 30429
