config/victoria-metrics-k8s-stack/vmalert-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmalert-victoria-metrics-stack-vmks
  namespace: victoria-metrics-stack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: vmalert
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30082
