config/victoria-metrics-k8s-stack/vmsingle-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmsingle-victoria-metrics-stack-vmks
  namespace: victoria-metrics-stack
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: vmsingle
  ports:
    - port: 8428
      targetPort: 8428
      nodePort: 30428
